--- a/View/UserView/TestScreensView.xaml
+++ b/View/UserView/TestScreensView.xaml
@@ -38,5 +38,9 @@
             Text="To Edit Collection"
             Command="{Binding NavigateToEditCollection}" />
 
+        <Button 
+            Text="To User Collections" 
+            Command="{Binding NavigateToUserCollections}" />
+
     </VerticalStackLayout>
 </ContentPage>
