--- a/View/UserView/UserCollectionsView.xaml
+++ b/View/UserView/UserCollectionsView.xaml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUIRecipeApp.View.UserView.UserCollectionsView"
-             xmlns:models="clr-namespace:MAUIRecipeApp.Models"
-             xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.UserView"
-             Title="User Collections"
-             Background="{StaticResource WhiteText}">
+<ContentPage
+    x:Class="MAUIRecipeApp.View.UserView.UserCollectionsView"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
+    xmlns:models="clr-namespace:MAUIRecipeApp.Models"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.UserView"
+    Title="User Collections"
+    Background="{StaticResource WhiteText}">
 
     <ContentPage.BindingContext>
         <viewmodel:UserCollectionsViewModel />
@@ -14,46 +16,67 @@
     <ScrollView>
         <VerticalStackLayout Margin="16,16,16,0" Spacing="16">
 
-            <!-- Header Section -->
-            <VerticalStackLayout HorizontalOptions="Start" Spacing="4">
-                <Label FontSize="18"
-                       Text="Your Collections"
-                       FontAttributes="Bold"
-                       TextColor="{StaticResource PrimaryDarkText}" />
-            </VerticalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="8">
+                <Label
+                    FontAttributes="Bold"
+                    FontSize="26"
+                    HorizontalOptions="Center"
+                    Text="Your Collections"
+                    TextColor="{StaticResource PrimaryDark}"
+                    VerticalTextAlignment="Center" />
+                <Button
+                    Margin="4"
+                    BackgroundColor="LightBlue"
+                    Command="{Binding EditCollectionCommand}"
+                    FontSize="18"
+                    Text="Edit">
+                    <Button.ImageSource>
+                        <FontImageSource
+                            FontFamily="MaterialSharp"
+                            Glyph="{x:Static m:MaterialSharp.Edit}"
+                            Color="{StaticResource WhiteText}" />
+                    </Button.ImageSource>
+                </Button>
+            </HorizontalStackLayout>
 
-            <!-- Collection List -->
-            <CollectionView ItemsSource="{Binding AllCollections}" Margin="0,10">
+            <!--  Collection List  -->
+            <CollectionView Margin="0,10" ItemsSource="{Binding AllCollections}">
                 <CollectionView.ItemsLayout>
-                    <GridItemsLayout Span="2" Orientation="Vertical" />
+                    <GridItemsLayout Orientation="Vertical" Span="2" />
                 </CollectionView.ItemsLayout>
 
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:FoodCollection">
-                        <Border StrokeShape="RoundRectangle 10"
-                                StrokeThickness="1"
-                                Padding="10"
-                                Margin="5">
+                        <Border
+                            Margin="5"
+                            Padding="10"
+                            StrokeShape="RoundRectangle 10"
+                            StrokeThickness="1">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="25" />
                                     <RowDefinition Height="75" />
                                 </Grid.RowDefinitions>
 
-                                <!-- Collection Info -->
-                                <VerticalStackLayout Grid.Row="1" Spacing="5" Padding="8">
-                                    <!-- Button to navigate to the collection details -->
-                                    <Button Command="{Binding Path=CollectionDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:UserCollectionsViewModel}}}"
-                                            CommandParameter="{Binding FoodCollectionId}"
-                                            Text="{Binding CollectionName}"
-                                            FontSize="18"
-                                            TextColor="{StaticResource PrimaryDarkText}"
-                                            FontAttributes="Bold" />
+                                <!--  Collection Info  -->
+                                <VerticalStackLayout
+                                    Grid.Row="1"
+                                    Padding="8"
+                                    Spacing="5">
+                                    <!--  Button to navigate to the collection details  -->
+                                    <Button
+                                        Command="{Binding Path=CollectionDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:UserCollectionsViewModel}}}"
+                                        CommandParameter="{Binding FoodCollectionId}"
+                                        FontAttributes="Bold"
+                                        FontSize="18"
+                                        Text="{Binding CollectionName}"
+                                        TextColor="{StaticResource PrimaryDarkText}" />
 
-                                        <!-- Collection Description -->
-                                        <Label Text="{Binding Description}"
-                                           FontSize="14"
-                                           TextColor="{StaticResource Gray300}" />
+                                    <!--  Collection Description  -->
+                                    <Label
+                                        FontSize="14"
+                                        Text="{Binding Description}"
+                                        TextColor="{StaticResource Gray300}" />
                                 </VerticalStackLayout>
                             </Grid>
                         </Border>
@@ -61,13 +84,15 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-            <!-- Back to Home Button -->
-            <Button Text="Back to Home"
-                    Command="{Binding CancelCommand}"
-                    BackgroundColor="{StaticResource Gray200}"
-                    TextColor="{StaticResource PrimaryDarkText}"
-                    CornerRadius="10"
-                    HorizontalOptions="Center" />
+            <!--  Back to Home Button  -->
+            <!--
+            <Button
+                BackgroundColor="{StaticResource Gray200}"
+                Command="{Binding CancelCommand}"
+                CornerRadius="10"
+                HorizontalOptions="Center"
+                Text="Back to Home"
+                TextColor="{StaticResource PrimaryDarkText}" />-->
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
